# claude-skills

./: .gitignore  README.md
codebase-analysis-skill/: CHANGELOG.md  CONTRIBUTING.md  Gotchas.md  LICENSE  README.md  WORKFLOW.md  skill.md
codebase-analysis-skill/docs/: ANALYSIS_FLOW.md  INIT_GUIDE.md  PHASE1_ENHANCED.md  PHASE4_GUIDE.md
codebase-analysis-skill/examples/: example-output.md
codebase-analysis-skill/helpers/: ascii_diagrams.sh  code_ref_formatter.sh
codebase-analysis-skill/templates/: algorithm_flow.md  data_structures.md  key_questions.md  system_overview.md
codebase-analysis-skill/verification/: code_reference_checklist.md  verify_all_refs.sh  verify_analysis.sh
ros2-migration/: API_MAPPING.md  Gotchas.md  README.md  SKILL.md  WORKFLOW.md
ros2-migration/examples/: fast-livo2-migration.md  voxel-slam-migration.md
ros2-migration/helpers/: audit_workspace.sh  convert_package_xml.py  launch_xml_to_py.py  rewrite_headers.sh  rewrite_rviz_config.sh  scaffold_cmakelists.sh
ros2-migration/templates/: CMakeLists.txt  component.cpp  launch.py  lifecycle_node.cpp  node.cpp  package.xml  params.yaml
ros2-migration/verification/: checklist.md  deprecation_grep.sh  smoke_test.sh
